@@ -5,8 +5,6 @@ import org.jetbrains.annotations.NotNull;
 import org.springframework.stereotype.Component;
 import pl.myc22ka.mathapp.ai.prompt.dto.PrefixValue;
 import pl.myc22ka.mathapp.model.set.ISet;
-import pl.myc22ka.mathapp.model.set.SetSymbols;
-import pl.myc22ka.mathapp.model.set.sets.Interval;
 import pl.myc22ka.mathapp.step.component.StepExecutor;
 import pl.myc22ka.mathapp.step.component.helper.StepExecutionHelper;
 import pl.myc22ka.mathapp.step.model.StepType;
@@ -16,32 +14,26 @@ import java.util.List;
 
 @Component
 @RequiredArgsConstructor
-public class FindAllIntegers implements StepExecutor {
+public class Complement implements StepExecutor {
 
     private final StepExecutionHelper helper;
 
     @Override
     public StepType getType() {
-        return StepType.SET_FIND_ALL_INTEGERS_IN_RANGE;
+        return StepType.SET_COMPLEMENT;
     }
 
     @Override
     public void execute(@NotNull StepWrapper step, List<PrefixValue> context) {
         List<ISet> sets = helper.getSetsFromContext(step, context);
+        helper.ensureTwoSets(sets);
 
-        ISet first = sets.getFirst();
+        ISet first = sets.get(0);
+        ISet uniwersum = sets.get(1);
 
-        if (SetSymbols.containsInfinity(first.toString())){
-            throw new IllegalArgumentException("Cannot find all integers in a range with infinity: " + first);
-        }
+        ISet complement = first.complement(uniwersum);
 
-        if (first instanceof Interval interval) {
-            var allIntegers = interval.findAllIntegers();
-            String newKey = helper.nextContextKey(context);
-
-            context.add(new PrefixValue(newKey, allIntegers.toString()));
-        } else {
-            throw new IllegalArgumentException("Expected Interval but got: " + first.getClass().getSimpleName());
-        }
+        String newKey = helper.nextContextKey(context);
+        context.add(new PrefixValue(newKey, complement.toString()));
     }
 }
